Trying to solve the problem of unmoving messages due to low z-index

--- a/CSS/AdminPage_Template_Teams_Style.css
+++ b/CSS/AdminPage_Template_Teams_Style.css
@@ -189,7 +189,7 @@ body {
 
 .custom-body {
     position:fixed;
-    z-index: -1;
+    z-index: 2;
     /* display: flex; */
     /* flex-wrap: wrap; */
     top: 10vh;
@@ -243,6 +243,7 @@ body {
         padding-bottom: 20px;
         overflow: auto;
         transition: background-color 1s ease;
+        z-index: 2;
     }
     #admin-page-header {
         /* position: fixed; */
